Archive2/8a/8af21c77cc9825/output
main.cpp: In function 'int main()':
main.cpp:6:5: error: 'foo' was not declared in this scope
     foo<b> x;
     ^
main.cpp:6:12: error: 'x' was not declared in this scope
     foo<b> x;
            ^
